--- a/InputHumanizer.csproj
+++ b/InputHumanizer.csproj
@@ -9,6 +9,7 @@
     <OutputType>Library</OutputType>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
     <PackageReference Include="SharpDX.Mathematics" Version="4.2.0" />
   </ItemGroup>
   <ItemGroup Condition="'$(SolutionName)' == 'ExileApi'">
@@ -19,7 +20,7 @@
   </ItemGroup>
   <ItemGroup Condition="'$(SolutionName)' != 'ExileApi'">
     <Reference Include="ExileCore">
-      <HintPath>$(exapiPackage)\ExileCore.dll</HintPath>
+      <HintPath>$(exapiPackage)\ExileCore2.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="InputHumanizerLib">
